--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,304 @@
+absl-py==2.0.0
+accelerate==0.25.0
+aiofiles==23.2.1
+aiohttp==3.9.1
+aiosignal==1.3.1
+altair==5.2.0
+annotated-types==0.6.0
+anyio==3.7.1
+arabic-reshaper==2.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.3.1
+asttokens==2.4.0
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
+Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+black==23.9.1
+bleach==6.0.0
+blinker==1.6.2
+blis==0.7.11
+cachetools==5.3.2
+catalogue==2.0.10
+certifi==2020.12.5
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==3.2.0
+ChatterBot==0.8.4
+chatterbot-corpus==1.1.4
+click==8.1.6
+cloudpathlib==0.16.0
+colorama==0.4.6
+comm==0.1.4
+comtypes==1.2.0
+confection==0.1.3
+contourpy==1.1.1
+cricket-score==1.0
+ctransformers==0.2.27
+cvzone==1.6.1
+cycler==0.12.1
+cymem==2.0.8
+dataclasses-json==0.6.3
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.7
+distro==1.8.0
+dj-database-url==0.5.0
+Django==3.1.4
+django-autoslug==1.9.8
+django-ckeditor==6.0.0
+django-crispy-forms==1.10.0
+django-heroku==0.3.1
+django-js-asset==1.2.2
+django-registration-redux==1.4
+django-widget-tweaks==1.4.8
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+exceptiongroup==1.1.3
+executing==1.2.0
+faiss-cpu==1.7.4
+fastapi==0.104.1
+fastjsonschema==2.18.0
+ffmpy==0.3.1
+filelock==3.12.2
 Flask==2.0.2
-Pillow==9.0.1
-torch==1.10.0
-torchvision==0.11.1
-pandas==1.4.0
-gdown==4.0.1
+Flask-Cors==3.0.10
+flatbuffers==23.5.26
+fonttools==4.43.1
+fqdn==1.5.1
+frozenlist==1.4.0
+fsspec==2023.10.0
+future==0.18.2
+gast==0.5.4
+gdown==5.1.0
+gitdb==4.0.11
+GitPython==3.1.40
+google-auth==2.23.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+gradio==4.8.0
+gradio_client==0.7.1
+greenlet==3.0.2
+grpcio==1.59.0
+gTTS==2.4.0
+gunicorn==20.0.4
+h11==0.14.0
+h5py==3.10.0
+html5lib==1.1
+httpcore==1.0.2
+httpx==0.25.2
+huggingface-hub==0.17.3
+idna==2.10
+importlib-metadata==6.11.0
+importlib-resources==6.1.1
+ipykernel==6.25.2
+ipython==8.16.1
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.19.0
+Jinja2==3.0.3
+joblib==1.3.2
+json5==0.9.14
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.6
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+jupyterlab_code_formatter==2.2.1
+jupyterlab_server==2.25.0
+keras==2.14.0
+kiwisolver==1.4.5
+langchain==0.0.348
+langchain-core==0.0.12
+langcodes==3.3.0
+langsmith==0.0.69
+libclang==16.0.6
+lxml==4.9.3
+Markdown==3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+marshmallow==3.20.1
+mathparse==0.1.2
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mechanize==0.4.8
+mistune==3.0.1
+ml-dtypes==0.2.0
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+nbclient==0.7.4
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+networkx==3.1
+nltk==3.8.1
+notebook==7.0.3
+notebook_shim==0.2.3
+numpy==1.25.2
+oauthlib==3.2.2
+openai==1.3.7
+opencv-python==4.8.0.76
+opt-einsum==3.3.0
+orjson==3.9.10
+overrides==7.4.0
+packaging==23.2
+pandas==2.0.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.11.2
+pickleshare==0.7.5
+pillow==10.2.0
+platformdirs==3.10.0
+plyer==2.1.0
+preshed==3.0.9
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+protobuf==4.24.4
+psutil==5.9.5
+psycopg2==2.9.9
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyarrow==14.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycricbuzz==2.4
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydeck==0.8.1b0
+pydub==0.25.1
+pygame==2.5.2
+Pygments==2.16.1
+PyJWT==1.7.1
+pymongo==3.13.0
+pyparsing==3.1.1
+pypdf==3.17.1
+PyPDF2==1.26.0
+pypiwin32==223
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+python-multipart==0.0.6
+python-twitter==3.5
+pyttsx3==2.90
+pytz==2020.4
+pywin32==306
+pywinpty==2.0.11
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.4.4
+QtPy==2.4.1
+razorpay==1.2.0
+referencing==0.30.2
+regex==2023.10.3
+reportlab==4.0.9
+requests==2.25.1
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.0
+rpds-py==0.10.3
+rsa==4.9
+safetensors==0.4.0
+scikit-learn==1.3.0
+scipy==1.11.1
+seaborn==0.13.0
+semantic-version==2.10.0
+Send2Trash==1.8.2
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+shellingham==1.5.4
+six==1.15.0
+sklearn==0.0.post9
+smart-open==6.4.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.23
+sqlparse==0.4.1
+srsly==2.4.8
+stack-data==0.6.2
+starlette==0.27.0
+streamlit==1.29.0
+streamlit-chat==0.1.1
+sympy==1.12
+tenacity==8.2.3
+tensorboard==2.14.1
+tensorboard-data-server==0.7.2
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
+tensorflow-intel==2.14.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+terminado==0.17.1
+thinc==8.2.1
+threadpoolctl==3.2.0
+tiktoken==0.5.2
+tinycss2==1.2.1
+tokenizers==0.14.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.12.0
+toolz==0.12.0
+torch==2.0.1
+torchsummary==1.5.1
+torchvision==0.15.2
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.10.0
+transformers==4.35.0
+twilio==6.51.1
+typer==0.9.0
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+uri-template==1.3.0
+urllib3==1.26.2
+uvicorn==0.24.0.post1
+validators==0.22.0
+virtualenv==20.24.3
+voila==0.5.3
+wasabi==1.1.2
+watchdog==3.0.0
+wcwidth==0.2.6
+weasel==0.3.3
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.3
+websockets==11.0.3
+Werkzeug==2.0.2
+whitenoise==5.1.0
+widgetsnbextension==4.0.9
+win10toast==0.9
+wrapt==1.14.1
+xhtml2pdf==0.2.5
+yarl==1.9.4
+zipp==3.17.0
